@@ -328,6 +328,13 @@ condition|(
 name|childName
 operator|!=
 literal|null
+operator|&&
+name|childName
+operator|.
+name|startsWith
+argument_list|(
+name|PREFIX
+argument_list|)
 condition|)
 block|{
 try|try
@@ -919,20 +926,8 @@ comment|// otherwise we may miss the response.
 name|String
 name|watchID
 init|=
-name|createData
-argument_list|(
-name|dir
-operator|+
-literal|"/"
-operator|+
-name|response_prefix
-argument_list|,
-literal|null
-argument_list|,
-name|CreateMode
-operator|.
-name|EPHEMERAL_SEQUENTIAL
-argument_list|)
+name|createResponseNode
+argument_list|()
 decl_stmt|;
 name|Object
 name|lock
@@ -965,33 +960,11 @@ literal|true
 argument_list|)
 decl_stmt|;
 comment|// create the request node
-name|createData
+name|createRequestNode
 argument_list|(
-name|dir
-operator|+
-literal|"/"
-operator|+
-name|PREFIX
-operator|+
-name|watchID
-operator|.
-name|substring
-argument_list|(
-name|watchID
-operator|.
-name|lastIndexOf
-argument_list|(
-literal|"-"
-argument_list|)
-operator|+
-literal|1
-argument_list|)
-argument_list|,
 name|data
 argument_list|,
-name|CreateMode
-operator|.
-name|PERSISTENT
+name|watchID
 argument_list|)
 expr_stmt|;
 synchronized|synchronized
@@ -1081,6 +1054,78 @@ name|stop
 argument_list|()
 expr_stmt|;
 block|}
+block|}
+DECL|method|createRequestNode
+name|void
+name|createRequestNode
+parameter_list|(
+name|byte
+index|[]
+name|data
+parameter_list|,
+name|String
+name|watchID
+parameter_list|)
+throws|throws
+name|KeeperException
+throws|,
+name|InterruptedException
+block|{
+name|createData
+argument_list|(
+name|dir
+operator|+
+literal|"/"
+operator|+
+name|PREFIX
+operator|+
+name|watchID
+operator|.
+name|substring
+argument_list|(
+name|watchID
+operator|.
+name|lastIndexOf
+argument_list|(
+literal|"-"
+argument_list|)
+operator|+
+literal|1
+argument_list|)
+argument_list|,
+name|data
+argument_list|,
+name|CreateMode
+operator|.
+name|PERSISTENT
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|createResponseNode
+name|String
+name|createResponseNode
+parameter_list|()
+throws|throws
+name|KeeperException
+throws|,
+name|InterruptedException
+block|{
+return|return
+name|createData
+argument_list|(
+name|dir
+operator|+
+literal|"/"
+operator|+
+name|response_prefix
+argument_list|,
+literal|null
+argument_list|,
+name|CreateMode
+operator|.
+name|EPHEMERAL_SEQUENTIAL
+argument_list|)
+return|;
 block|}
 DECL|method|peekTopN
 specifier|public
